# pca-package-example

./: .bumpversion.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING-old.md  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_suggestion.md
.github/workflows/: check_code_quality.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
tests/: test_cli.py  test_init.py
usage/: index.html
